--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="inner_languages">
         <div class="child_languages">
             <div class="languages_img">
-                <img src="T:\HTML\KENDİ WEB SİTEM\img\c++-removebg-preview.png" alt="" >
+                <img src="T:\HTML\KENDİ WEB SİTEM\img\c++-removebg-preview.png" alt="">
             </div>
             <div class="detail">
                 <h3>C++</h3>
@@ -112,7 +112,7 @@
         </div>
         <div class="child_languages">
             <div class="languages_img">
-                <img src="T:\HTML\KENDİ WEB SİTEM\img\html_css-removebg-preview.png" alt="" >
+                <img src="T:\HTML\KENDİ WEB SİTEM\img\html_css-removebg-preview.png" alt="">
             </div>
             <div class="detail">
                 <h3>HTML CSS</h3>
@@ -125,7 +125,7 @@
         </div>
         <div class="child_languages">
             <div class="languages_img">
-                <img src="T:\HTML\KENDİ WEB SİTEM\img\images-removebg-preview.png" alt="" >
+                <img src="T:\HTML\KENDİ WEB SİTEM\img\images-removebg-preview.png" alt="">
             </div>
             <div class="detail">
                 <h3>C#</h3>
@@ -210,18 +210,19 @@
             <p>Sakarya Üniversitesi Yazılım Mühendisliği bölümünde öğrenciyim.</p>
             <ul class="footer_social">
                 <li><a href="https://www.instagram.com/trkbyzc/" target="_blank"><i class="fab fa-instagram"></i></li>
-                <li><a href="https://www.linkedin.com/in/t%C3%BCrkbey-yoz%C3%A7u-3725a4246/" target="_blank"><i class="fab fa-linkedin"></i></li>
+                <li><a href="https://www.linkedin.com/in/t%C3%BCrkbey-yoz%C3%A7u-3725a4246/" target="_blank"><i
+                            class="fab fa-linkedin"></i></li>
             </ul>
         </div>
         <div class="child_footer contact_section">
-            <h3>İLETİŞİM</h3>   
+            <h3>İLETİŞİM</h3>
             <ul class="footer_contact">
                 <li><i class="fas fa-map-marked-alt"></i>Kadirli,Osmaniye</li>
                 <li><i class="fas fa-phone"></i>+905398131576</li>
                 <li><i class="fas fa-envelope"></i>turkbey.yozcu@gmail.com</li>
 
             </ul>
-            
+
             </ul>
         </div>
     </div>
